--- a/less/style.less
+++ b/less/style.less
@@ -46,7 +46,9 @@ body {
 .list__item:not(:last-child) {
   margin-right: 15px;
 }
-
+.header__cart {
+  display: flex;
+}
 .header__cart .fas{
     font-size: 20px;
     cursor: pointer;
@@ -180,22 +182,16 @@ body {
 }
 .input {
   position: relative;
-  // overflow: hidden;
 }
 .input__field {
   height: 45px;
   padding: 0;
-  // padding-left: 15px;
   border: 1px solid #CCCCCC;
   width: 99.5%;
   margin-bottom: 10px;
   text-indent: 15px;
 }
 .submit {
-  // position: absolute;
-  // top: 0;
-  // right: 0;
-  // bottom: 0;
   width: 100%;
   height: 47px;
   background-color: #3a3a3a;
@@ -266,16 +262,24 @@ body {
     color: #3086C8;
 }
 .cart {
-  position: absolute;
+  position: fixed;
   top: 0;
   right: 0;
   background-color: #fff;
   border: 1px solid #DDDDDD;
   padding: 25px;
-  min-width: 370px;
+  transition: all .4s ease;
+  transform: translateY(-100%);
+  left: 0;
+  @media (min-width: 750px) {
+    min-width: 370px;
+    left: auto;
+  }
+}
+.cart--show {
+  transform: translateY(0);
 }
 .cart__header {
-  // padding-top: 10px;
   padding-bottom: 10px;
   display: flex;
   justify-content: space-between;
